cleaning code suite